@@ -45,6 +45,8 @@ import org.apache.lucene.util.automaton.Transition;
  * different paths of the {@link Automaton}.
  */
 public final class GraphTokenStreamFiniteStrings {
+  /** Maximum level of recursion allowed in recursive operations. */
+  private static final int MAX_RECURSION_LEVEL = 1000;
 
   private AttributeSource[] tokens = new AttributeSource[4];
   private final Automaton det;
@@ -271,7 +273,12 @@ public final class GraphTokenStreamFiniteStrings {
       a.getNextTransition(t);
       if (visited.get(t.dest) == false) {
         parent[t.dest] = state;
-        articulationPointsRecurse(a, t.dest, d + 1, depth, low, parent, visited, points);
+        if (d < MAX_RECURSION_LEVEL) {
+          articulationPointsRecurse(a, t.dest, d + 1, depth, low, parent, visited, points);
+        } else {
+          throw new IllegalArgumentException(
+              "Exceeded maximum recursion level during graph analysis");
+        }
         childCount++;
         if (low[t.dest] >= depth[state]) {
           isArticulation = true;
